fix bug causing the editor to overlap the header

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -66,7 +66,7 @@ body {
 }
 
 .page-content {
-  width: 100%;
+  width: 50%;
   height: 100%;
 }
 
@@ -79,8 +79,10 @@ body {
 }
 
 #editor {
+  position: fixed;
   margin-top: 0px;
-  width: 100%;
+  margin-bottom: 0px;
+  width: 49%;
   height: 100%;
 }
 
